# Watty

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  L_ETC.sln  README  imgui.ini  index.html  premake5.lua  testScene.json
Demos/: CMakeLists.txt  premake5.lua
Demos/ConwaysGameOfLife/: CMakeLists.txt
Demos/ConwaysGameOfLife/src/: ConwayLayer.cpp  ConwayLayer.h  ConwaysGameOfLife.cpp
Demos/Make/vs2019/: ConwaysGameOfLife.vcxproj  ConwaysGameOfLife.vcxproj.filters  Demos.sln  PhysicsDemo.vcxproj  PhysicsDemo.vcxproj.filters  PlatformerDemo.vcxproj  PlatformerDemo.vcxproj.filters  SimpleGame.vcxproj  SimpleGame.vcxproj.filters  TileMapDemo.vcxproj  TileMapDemo.vcxproj.filters  imgui.ini
Demos/PhysicsDemo/: CMakeLists.txt  PhysicsDemo.vcxproj  imgui.ini
Demos/PhysicsDemo/Debug/: vc142.idb
Demos/PhysicsDemo/Debug/PhysicsDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Demos/PhysicsDemo/Release/PhysicsDemo.tlog/: CL.read.1.tlog  PhysicsDemo.lastbuildstate  PhysicsDemo.write.1u.tlog  link.command.1.tlog  link.read.1.tlog
Demos/PhysicsDemo/src/: PhysicsDemo.cpp  main.cpp
Demos/PlatformerDemo/: CMakeLists.txt  PlatformerDemo.vcxproj
Demos/PlatformerDemo/src/: main.cpp
Demos/SimpleGame/: CMakeLists.txt  SimpleGame.vcxproj  imgui.ini
Demos/SimpleGame/Debug/: vc142.idb
Demos/SimpleGame/Debug/SimpleGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Demos/SimpleGame/Release/SimpleGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  SimpleGame.write.1u.tlog  link.delete.1.tlog  link.write.1.tlog
Demos/SimpleGame/src/: simplegame.cpp
Demos/TileMapDemo/: CMakeLists.txt
Demos/TileMapDemo/src/: TileMapDemo.cpp
Demos/build_web/: CMakeCache.txt  Makefile  cmake_install.cmake
Demos/build_web/ConwaysGameOfLife/: Makefile  cmake_install.cmake
Demos/build_web/PhysicsDemo/: Makefile  cmake_install.cmake
Demos/build_web/PlatformerDemo/: Makefile  cmake_install.cmake
Demos/build_web/SimpleGame/: Makefile  cmake_install.cmake
Demos/build_web/TileMapDemo/: Makefile  cmake_install.cmake
Demos/build_windows/: ALL_BUILD.vcxproj  CMakeCache.txt  Demos.sln  cmake_install.cmake
Demos/build_windows/ConwaysGameOfLife/: ALL_BUILD.vcxproj  ConwaysGameOfLife.sln  ConwaysGameOfLife.vcxproj  ConwaysGameOfLife.vcxproj.filters  cmake_install.cmake
Demos/build_windows/PhysicsDemo/: ALL_BUILD.vcxproj  PhysicsDemo.sln  PhysicsDemo.vcxproj  PhysicsDemo.vcxproj.filters  cmake_install.cmake  imgui.ini
Demos/build_windows/PlatformerDemo/: ALL_BUILD.vcxproj  PlatformerDemo.sln  PlatformerDemo.vcxproj  PlatformerDemo.vcxproj.filters  cmake_install.cmake
Demos/build_windows/SimpleGame/: ALL_BUILD.vcxproj  SimpleGame.sln  SimpleGame.vcxproj  SimpleGame.vcxproj.filters  cmake_install.cmake
Demos/build_windows/TileMapDemo/: ALL_BUILD.vcxproj  TileMapDemo.sln  TileMapDemo.vcxproj  TileMapDemo.vcxproj.filters  cmake_install.cmake  imgui.ini
Demos/res/: res.h
Demos/res/shaders/: grid.vert
Demos/res/tilemaps/: Terrain.tsx  testTilemap.json
Sandbox/: CMakeLists.txt
Sandbox/res/: res.h  testScene.json
Sandbox/res/shaders/: simple.vert
Sandbox/res/tilemaps/: levelOne.json  test.json
Sandbox/src/: Sandbox.cpp  Sandbox.h
Watty-Core/: CMakeLists.txt  README
Watty-Core/Release/: ftver.res
Watty-Core/ext/freetype-gl/: opengl.h  texture-atlas.c
Watty-Core/ext/vulkan/include/: vulkan.hpp
Watty-Core/include/Watty/: Resource.h  Watty.h
Watty-Core/include/Watty/audio/: audioclip.h  audiomanager.h
Watty-Core/include/Watty/ecs/: ECS.h  ECSComponent.h  ECSSystem.h
Watty-Core/include/Watty/gameobjects/: GameObject.h  GameObject2D.h  GameObject3D.h  Instantiate.h  Transform.h  Transform2D.h  Transform3D.h
Watty-Core/include/Watty/graphics/: Camera.h  Color.h  DebugRenderer.h  GridRenderer.h  ParticleRenderer.h  ParticleSystem.h  SimpleRenderer2D.h  batchrenderer2d.h  renderable.h  renderable2d.h  renderable3d.h  renderer.h  renderer2d.h  shader.h  simple2drenderer.h  sprite.h  texture.h  window.h
Watty-Core/include/Watty/input/: Input.h
Watty-Core/include/Watty/levels/: Level.h  Level2D.h  Level3D.h
Watty-Core/include/Watty/math/: math.h  math_functions.h  matrix4.h  vector2.h  vector3.h  vector4.h
Watty-Core/include/Watty/physics/: DebugPhysics.h  MapBodyBuilder.h  PhysicsBody2D.h  PhysicsConstants.h  PhysicsWorld2D.h  QueryAABBCallback.h  RaycastCallback.h
Watty-Core/include/Watty/scene/: Scene.h
Watty-Core/include/Watty/utils/: Guid.hpp  Random.h  Stats.h  (+3 more)
Watty-Core/res/: res_watty.cpp  res_watty.h
Watty-Core/res/shaders/: default.frag  default_es3.frag  default_es3.vert  screen.frag  screen.vert
Watty-Core/src/: GameObject.h  Watty.h  letc.h
Watty-Core/src/audio/: audioclip.cpp  audioclip.h  audiomanager.cpp  audiomanager.h
Watty-Core/src/ecs/: ECS.cpp  ECSComponent.cpp  ECSSystem.cpp
Watty-Core/src/gameobjects/: GameObject.cpp  GameObject2D.cpp  GameObject3D.cpp  Instantiate.cpp  Transform.cpp  Transform2D.cpp  Transform3D.cpp
Watty-Core/src/graphics/: Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  batchrenderer2d.cpp  renderer2d.h  shader.cpp  shader.h  simple2drenderer.h  sprite.cpp  texture.cpp  texture.h  window.cpp  window.h
Watty-Core/src/input/: Input.cpp
Watty-Core/src/levels/: Level.cpp  Level2D.cpp
Watty-Core/src/math/: matrix4.cpp  vector2.cpp  vector3.cpp  vector4.cpp
Watty-Core/src/physics/: DebugPhysics.h  MapBodyBuilder.cpp  PhysicsBody2D.cpp  PhysicsBody2D.h  PhysicsConstants.cpp  PhysicsConstants.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h  QueryAABBCallback.h
Watty-Core/src/scene/: Scene.cpp
Watty-Core/src/utils/: Guid.cpp  Random.cpp  Resource.cpp  Stats.cpp  Timer.cpp  file_utils.h  timer.h
dependencies/glad/: CMakeLists.txt
editor/: CMakeLists.txt
editor/dependencies/python-cmake/: CMakeLists.txt
editor/include/: Editor.h  ProjectManager.h  PythonManager.h
editor/python/: open_project.py
editor/src/: Editor.cpp  ProjectManager.cpp  PythonManager.cpp
(+644 files in other folders)
